[common] fix(general): fixed divider size when aligned

--- a/packages/common/web/statics/styles/general.rtlignore.scss
+++ b/packages/common/web/statics/styles/general.rtlignore.scss
@@ -36,3 +36,39 @@
     }
   }
 }
+
+.alignCenter {
+  display: block;
+
+  &:not(.textWrapNowrap) {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.sizeFullWidth,
+.textWrapNowrap {
+  width: 100%;
+}
+
+.sizeContent {
+  &:not(.textWrapNowrap) {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.sizeSmall {
+  &:not(.textWrapNowrap) {
+    width: 350px;
+  }
+}
+
+.sizeSmallCenter {
+  &:not(.textWrapNowrap) {
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
