--- a/packages/common/web/statics/styles/general.scss
+++ b/packages/common/web/statics/styles/general.scss
@@ -74,42 +74,6 @@
   max-width: 100%;
 }
 
-.alignCenter {
-  display: block;
-
-  &:not(.textWrapNowrap) {
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.sizeFullWidth,
-.textWrapNowrap {
-  width: 100%;
-}
-
-.sizeContent {
-  &:not(.textWrapNowrap) {
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
-.sizeSmall {
-  &:not(.textWrapNowrap) {
-    width: 350px;
-  }
-}
-
-.sizeSmallCenter {
-  &:not(.textWrapNowrap) {
-    width: 350px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
 //*** PANEL ***//
 .panelContainer {
   @extend .fontElementMap;
